--- a/frontend/index.html
+++ b/frontend/index.html
@@ -228,23 +228,28 @@
       <div class="text-center mb-16">
         <h2 class="text-4xl md:text-5xl font-lexend font-bold text-slate-800 mb-4">Radar Solidário em Números</h2>
         <p class="text-lg md:text-xl text-slate-600 max-w-3xl mx-auto">Nosso compromisso é com resultados tangíveis e o
-          fortalecimento comunitário. (Dados ilustrativos)</p>
+          fortalecimento comunitário.</p>
+        <p id="loading-stats" class="text-sky-600 mt-4">Carregando estatísticas...</p>
       </div>
       <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8 text-center">
         <div class="p-8 bg-slate-50 rounded-xl shadow-lg">
-          <div class="text-emerald-500 font-lexend font-extrabold impact-number mb-2" data-count="1200">0</div>
+          <div id="impactPessoasAjudadas" class="text-emerald-500 font-lexend font-extrabold impact-number mb-2"
+            data-count="0">0</div>
           <h3 class="text-xl font-semibold text-slate-700">Pessoas Ajudadas</h3>
         </div>
         <div class="p-8 bg-slate-50 rounded-xl shadow-lg">
-          <div class="text-sky-500 font-lexend font-extrabold impact-number mb-2" data-count="350">0</div>
+          <div id="impactVoluntarios" class="text-sky-500 font-lexend font-extrabold impact-number mb-2" data-count="0">
+            0</div>
           <h3 class="text-xl font-semibold text-slate-700">Voluntários na Rede</h3>
         </div>
         <div class="p-8 bg-slate-50 rounded-xl shadow-lg">
-          <div class="text-amber-500 font-lexend font-extrabold impact-number mb-2" data-count="950">0</div>
+          <div id="impactConexoes" class="text-amber-500 font-lexend font-extrabold impact-number mb-2" data-count="0">0
+          </div>
           <h3 class="text-xl font-semibold text-slate-700">Conexões Solidárias</h3>
         </div>
         <div class="p-8 bg-slate-50 rounded-xl shadow-lg">
-          <div class="text-indigo-500 font-lexend font-extrabold impact-number mb-2" data-count="25">0</div>
+          <div id="impactComunidades" class="text-indigo-500 font-lexend font-extrabold impact-number mb-2"
+            data-count="0">0</div>
           <h3 class="text-xl font-semibold text-slate-700">Comunidades Atendidas</h3>
         </div>
       </div>
