feat: add images and section

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,6 +9,7 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="shortcut icon" href="Logo_Radar_Solidario.png" type="image/x-icon">
   <link
     href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Lexend:wght@300;400;500;600;700&display=swap"
     rel="stylesheet">
@@ -323,22 +324,77 @@
   <section id="ecossistema" class="py-16 md:py-24 bg-slate-100 section-reveal">
     <div class="container mx-auto px-6">
       <div class="text-center mb-16">
-        <h2 class="text-3xl md:text-4xl font-lexend font-bold text-slate-800 mb-4">Nosso Ecossistema de Apoio</h2>
-        <p class="text-lg text-slate-600 max-w-2xl mx-auto">Contamos com parcerias e tecnologias chave para fortalecer
-          nossa atuação.</p>
+        <h2 class="text-3xl md:text-4xl font-lexend font-bold text-slate-800 mb-4">Nossa Infraestrutura Tecnológica</h2>
+        <p class="text-lg text-slate-600 max-w-2xl mx-auto">
+          Conheça as principais ferramentas e frameworks que sustentam o
+          Radar Solidário:
+        </p>
       </div>
-      <div class="grid grid-cols-2 md:grid-cols-3 gap-8 items-center">
+      <div class="grid grid-cols-2 md:grid-cols-6 gap-8 items-center">
         <div class="text-center grayscale hover:grayscale-0 transition-all duration-300">
-          <img src="defesacivil.png" alt="Logo Defesa Civil" class="mx-auto h-16 mb-2">
+          <img src="net-framework.png" alt="Logo .NET" class="mx-auto h-16 w-24 object-contain mb-2">
+          <p class="text-sm font-medium text-slate-700">.NET</p>
+        </div>
+        <div class="text-center grayscale hover:grayscale-0 transition-all duration-300">
+          <img src="azure.png" alt="Logo Azure" class="mx-auto h-16 w-24 object-contain mb-2">
+          <p class="text-sm font-medium text-slate-700">Azure</p>
+        </div>
+        <div class="text-center grayscale hover:grayscale-0 transition-all duration-300">
+          <img src="stryker.svg" alt="Logo Stryker .NET" class="mx-auto h-16 w-24 object-contain mb-2">
+          <p class="text-sm font-medium text-slate-700">Stryker .NET</p>
+        </div>
+        <div class="text-center grayscale hover:grayscale-0 transition-all duration-300">
+          <img src="javascript.png" alt="Logo Javascript" class="mx-auto h-16 w-24 object-contain mb-2">
+          <p class="text-sm font-medium text-slate-700">Javascript</p>
+        </div>
+        <div class="text-center grayscale hover:grayscale-0 transition-all duration-300">
+          <img src="node.png" alt="Logo Node" class="mx-auto h-16 w-24 object-contain mb-2">
+          <p class="text-sm font-medium text-slate-700">Node</p>
+        </div>
+        <div class="text-center grayscale hover:grayscale-0 transition-all duration-300">
+          <img src="xunit.png" alt="Logo xUnit" class="mx-auto h-16 w-24 object-contain mb-2">
+          <p class="text-sm font-medium text-slate-700">xUnit</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section id="parceiros" class="py-16 md:py-24 bg-slate-100 section-reveal">
+    <div class="container mx-auto px-6">
+      <div class="text-center mb-16">
+        <h2 class="text-3xl md:text-4xl font-lexend font-bold text-slate-800 mb-4">Parceiros</h2>
+        <p class="text-lg text-slate-600 max-w-2xl mx-auto">
+          Uma iniciativa da Faculdade FIAP para o
+          <a href="https://www.fiap.com.br/graduacao/global-solution/" target="_blank"
+            class="text-sky-600 underline hover:text-sky-800 font-semibold">
+            Global Solution</a>, em parceria com:
+        </p>
+      </div>
+      <div class="grid grid-cols-2 md:grid-cols-6 gap-8 items-center">
+        <div class="text-center grayscale hover:grayscale-0 transition-all duration-300">
+          <img src="fiap-logo.svg" alt="Logo FIAP" class="mx-auto h-16 w-24 object-contain mb-2">
+          <p class="text-sm font-medium text-slate-700">FIAP</p>
+        </div>
+        <div class="text-center grayscale hover:grayscale-0 transition-all duration-300">
+          <img src="ibm.png" alt="Logo IBM" class="mx-auto h-16 w-24 object-contain mb-2">
+          <p class="text-sm font-medium text-slate-700">IBM</p>
+        </div>
+        <div class="text-center grayscale hover:grayscale-0 transition-all duration-300">
+          <img src="medicos-sem-fronteiras.png" alt="Logo Medicos sem Fronteiras"
+            class="mx-auto h-16 w-24 object-contain mb-2">
+          <p class="text-sm font-medium text-slate-700">Médicos sem Fronteiras</p>
+        </div>
+        <div class="text-center grayscale hover:grayscale-0 transition-all duration-300">
+          <img src="inpe.png" alt="Logo INPE" class="mx-auto h-16 w-24 object-contain mb-2">
+          <p class="text-sm font-medium text-slate-700">INPE</p>
+        </div>
+        <div class="text-center grayscale hover:grayscale-0 transition-all duration-300">
+          <img src="defesa-civil.png" alt="Logo Defesa Civil" class="mx-auto h-16 w-24 object-contain mb-2">
           <p class="text-sm font-medium text-slate-700">Defesa Civil</p>
         </div>
         <div class="text-center grayscale hover:grayscale-0 transition-all duration-300">
-          <img src="ong.png" alt="Logo ONGs Locais" class="mx-auto h-16 mb-2">
-          <p class="text-sm font-medium text-slate-700">ONGs Locais</p>
-        </div>
-        <div class="text-center grayscale hover:grayscale-0 transition-all duration-300">
-          <img src="google.png" alt="Logo Google APIs" class="mx-auto h-16 mb-2">
-          <p class="text-sm font-medium text-slate-700">Tecnologias Google</p>
+          <img src="bombeiros.png" alt="Logo Bombeiros" class="mx-auto h-16 w-24 object-contain mb-2">
+          <p class="text-sm font-medium text-slate-700">Bombeiros</p>
         </div>
       </div>
     </div>
